# app/model/rider.go
@@ -29,15 +29,15 @@ type RiderSignupReq struct {
 // RiderSigninRes 骑手登录数据返回
 type RiderSigninRes struct {
     ID              uint64            `json:"id"`
-    Token           string            `json:"token,omitempty"`           // 认证token
-    IsNewDevice     bool              `json:"isNewDevice"`               // 是否新设备
-    IsAuthed        bool              `json:"isAuthed"`                  // 是否已认证
-    IsContactFilled bool              `json:"isContactFilled"`           // 联系人是否添加
-    Contact         *RiderContact     `json:"contact,omitempty"`         // 联系人
-    Qrcode          string            `json:"qrcode"`                    // 二维码
-    Deposit         float64           `json:"deposit"`                   // 需缴押金
-    OrderNotActived bool              `json:"orderNotActived,omitempty"` // 存在未激活订单
-    RecentOrder     *RiderRecentOrder `json:"recentOrder,omitempty"`     // 骑手最近订单详情
+    Token           string            `json:"token,omitempty"`       // 认证token
+    IsNewDevice     bool              `json:"isNewDevice"`           // 是否新设备
+    IsAuthed        bool              `json:"isAuthed"`              // 是否已认证
+    IsContactFilled bool              `json:"isContactFilled"`       // 联系人是否添加
+    Contact         *RiderContact     `json:"contact,omitempty"`     // 联系人
+    Qrcode          string            `json:"qrcode"`                // 二维码
+    Deposit         float64           `json:"deposit"`               // 需缴押金
+    OrderNotActived bool              `json:"orderNotActived"`       // 存在未激活订单
+    RecentOrder     *RiderRecentOrder `json:"recentOrder,omitempty"` // 骑手最近订单详情
 }
 
 // RiderContact 紧急联系人
