# assets/docs/swagger.json
@@ -2163,38 +2163,6 @@
                 }
             }
         },
-        "/rider/v1/order/not-active": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "[R]骑手接口"
-                ],
-                "summary": "R30007 未激活骑士卡信息",
-                "operationId": "RiderOrderNotActived",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "骑手校验token",
-                        "name": "X-Rider-Token",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "请求成功",
-                        "schema": {
-                            "$ref": "#/definitions/model.OrderNotActived"
-                        }
-                    }
-                }
-            }
-        },
         "/rider/v1/path": {
             "get": {
                 "consumes": [
@@ -3355,51 +3323,16 @@
                 }
             }
         },
-        "model.OrderNotActived": {
+        "model.OrderPlan": {
             "type": "object",
             "properties": {
-                "amount": {
-                    "description": "骑士卡金额",
-                    "type": "number"
-                },
-                "city": {
-                    "description": "所属城市",
-                    "$ref": "#/definitions/model.City"
-                },
-                "deposit": {
-                    "description": "押金, 若押金为0则押金一行不显示",
-                    "type": "number"
-                },
                 "id": {
-                    "description": "订单编号",
+                    "description": "骑士卡ID",
                     "type": "integer"
                 },
-                "models": {
-                    "description": "可用电池型号, 显示为`72V30AH`即Voltage(V)+Capacity(AH), 逗号分隔",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.BatteryModel"
-                    }
-                },
-                "payway": {
-                    "description": "支付方式 1支付宝 2微信",
-                    "type": "integer",
-                    "enum": [
-                        1,
-                        2
-                    ]
-                },
-                "plan": {
-                    "description": "骑行卡详情",
-                    "$ref": "#/definitions/model.PlanItem"
-                },
-                "time": {
-                    "description": "支付时间",
+                "name": {
+                    "description": "骑士卡名称",
                     "type": "string"
-                },
-                "total": {
-                    "description": "总金额, 总金额为 amount + deposit",
-                    "type": "number"
                 }
             }
         },
@@ -3454,58 +3387,6 @@
                 "enable": {
                     "description": "启用或禁用",
                     "type": "boolean"
-                }
-            }
-        },
-        "model.PlanItem": {
-            "type": "object",
-            "required": [
-                "days",
-                "end",
-                "name",
-                "price",
-                "start"
-            ],
-            "properties": {
-                "commission": {
-                    "description": "提成",
-                    "type": "number"
-                },
-                "days": {
-                    "description": "有效天数 ",
-                    "type": "integer",
-                    "minimum": 1
-                },
-                "desc": {
-                    "description": "优惠信息",
-                    "type": "string"
-                },
-                "enable": {
-                    "description": "是否启用",
-                    "type": "boolean"
-                },
-                "end": {
-                    "description": "结束日期 ",
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "description": "骑士卡名称 ",
-                    "type": "string"
-                },
-                "original": {
-                    "description": "原价",
-                    "type": "number"
-                },
-                "price": {
-                    "description": "价格 ",
-                    "type": "number"
-                },
-                "start": {
-                    "description": "开始日期 ",
-                    "type": "string"
                 }
             }
         },
@@ -3679,25 +3560,48 @@
                     "description": "改动天数",
                     "type": "integer"
                 },
+                "amount": {
+                    "description": "骑士卡金额",
+                    "type": "number"
+                },
+                "city": {
+                    "description": "所属城市",
+                    "$ref": "#/definitions/model.City"
+                },
                 "days": {
                     "description": "总天数",
                     "type": "integer"
                 },
+                "deposit": {
+                    "description": "押金(只在未启用骑士卡中显示), 若押金为0则押金一行不显示",
+                    "type": "number"
+                },
                 "endAt": {
-                    "description": "结束时间",
+                    "description": "结束时间 / 预计套餐结束时间",
                     "type": "string"
+                },
+                "id": {
+                    "description": "订单ID",
+                    "type": "integer"
+                },
+                "models": {
+                    "description": "可用电池型号, 显示为`72V30AH`即Voltage(V)+Capacity(AH), 逗号分隔",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.BatteryModel"
+                    }
                 },
                 "pausedDays": {
                     "description": "暂停天数",
                     "type": "integer"
                 },
-                "planId": {
-                    "description": "骑士卡ID",
-                    "type": "integer"
-                },
-                "planName": {
-                    "description": "骑士卡名称",
+                "payAt": {
+                    "description": "支付时间",
                     "type": "string"
+                },
+                "plan": {
+                    "description": "骑士卡信息",
+                    "$ref": "#/definitions/model.OrderPlan"
                 },
                 "remaining": {
                     "description": "剩余天数",
@@ -3717,6 +3621,10 @@
                         3,
                         4
                     ]
+                },
+                "total": {
+                    "description": "总金额, 总金额为 amount + deposit",
+                    "type": "number"
                 },
                 "voltage": {
                     "description": "可用电压型号",
